# generic-cpp

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: ci.yml
